--- a/project 2/static/style.css
+++ b/project 2/static/style.css
@@ -36,3 +36,12 @@ body{
 
 
 }
+
+footer {
+    position: relative;
+    margin-top: 500px;
+    /* negative value of footer height */
+    height: 100px;
+    clear: both;
+
+}
