--- a/project 2/templates/template.html
+++ b/project 2/templates/template.html
@@ -49,6 +49,8 @@
           </div>
       </div>
   </div>
+
+</div>
 		{% endblock %}
 
     {% block scripts %}
@@ -57,4 +59,11 @@
     {% endblock %}
     
   </body>
+  <footer class="bg-light text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 CST group 3700: Christopher Raya, Kyle Dowling, Ricardo Perez Jr
+    </div>
+    <!-- Copyright -->
+  </footer>
 </html>
