--- a/project 2/static/style.css
+++ b/project 2/static/style.css
@@ -1,10 +1,12 @@
 body{
 
-    background-color: #00838F;
+    background-color: #5f5f5f;
+
 }
 
 
 .advanced{
+
 
     text-decoration: none;
     font-size: 15px;
@@ -22,6 +24,7 @@ body{
     background-color: #00838f !important;
     border-color: #00838f !important;
     box-shadow: none;
+
 }
 
 
@@ -38,10 +41,14 @@ body{
 }
 
 footer {
+    background-color: #5f5f5f;
     position: relative;
-    margin-top: 500px;
+    margin-top: 350px;
     /* negative value of footer height */
-    height: 100px;
+
     clear: both;
 
+}
+#test{
+    margin-top: 200px;
 }
