--- a/project 2/templates/template.html
+++ b/project 2/templates/template.html
@@ -35,12 +35,19 @@
                             </ul>
                           </div>              
                       </div>
-                      <div class="col-md-6">
+                      <!-- search stuff -->
+                      <form action="/results" method="get" autocomplete="off" class="subscribe-form">
+                        <div class="form-group d-flex col-md-6">
+                            <input type="text" class="form-control" placeholder="Enter a product" name="query" id="query" value="{{query}}">
+                            <input type="submit" value="Search" class="submit px-3">
+                        </div>
+                      </form>
+                      <!-- <div class="col-md-6">
                           <input type="text" class="form-control" placeholder="Enter a product">                        
                       </div>
                       <div class="col-md-3">
                           <button class="btn btn-secondary btn-block">Search Results</button>                          
-                      </div>
+                      </div> -->
                   </div>
                   <div class="mt-3">                      
 </div>
