--- a/project 2/templates/template.html
+++ b/project 2/templates/template.html
@@ -14,6 +14,7 @@
       <title>Project 2 </title>
       <link rel = "stylesheet" type = "text/css" href = "{{url_for('static', filename='style.css')}}">
     {% endblock %}
+
   </head>
   <body>
     <!-- Your page content -->
@@ -26,12 +27,12 @@
                   <div class="row g-3 mt-2">
                       <div class="col-md-3">
                           <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                               Any Store
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                              <li><a class="dropdown-item" href="#">Target</a></li>
-                              <li><a class="dropdown-item" href="#">BestBuy</a></li>
+                              <li><a class="dropdown-item" href="#" onclick="dropdown(this)">Target</a></li>
+                              <li><a class="dropdown-item" href="#" onclick="dropdown(this)">BestBuy</a></li>
                             </ul>
                           </div>              
                       </div>
