--- a/project 2/templates/template.html
+++ b/project 2/templates/template.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!-- Christopher Raya built this html page -->
 <html lang="en">
   <head>
     {% block head %}
@@ -11,7 +12,7 @@
         {{ bootstrap.load_css() }}
       {% endblock %}
 
-      <title>Project 2 </title>
+      <title>Project 3700 </title>
       <link rel = "stylesheet" type = "text/css" href = "{{url_for('static', filename='style.css')}}">
     {% endblock %}
 
@@ -23,18 +24,9 @@
       <div class="row d-flex justify-content-center">
           <div class="col-md-10">
               <div class="card p-3  py-4">
-                  <h5>An Easier way to find your product from BestBuy or Target</h5>
+                  <h5>An Easier way to find your product from Walmart or Target</h5>
                   <div class="row g-3 mt-2">
-                      <div class="col-md-3">
-                          <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                              Any Store
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                              <li><a class="dropdown-item" href="#" onclick="dropdown(this)">Target</a></li>
-                              <li><a class="dropdown-item" href="#" onclick="dropdown(this)">BestBuy</a></li>
-                            </ul>
-                          </div>              
+                      <div class="col-md-3">            
                       </div>
                       <!-- search stuff -->
                       <form action="/results" method="get" autocomplete="off" class="subscribe-form">
@@ -43,12 +35,6 @@
                             <input type="submit" value="Search" class="submit px-3">
                         </div>
                       </form>
-                      <!-- <div class="col-md-6">
-                          <input type="text" class="form-control" placeholder="Enter a product">                        
-                      </div>
-                      <div class="col-md-3">
-                          <button class="btn btn-secondary btn-block">Search Results</button>                          
-                      </div> -->
                   </div>
                   <div class="mt-3">                      
 </div>
