--- a/project 2/templates/template.html
+++ b/project 2/templates/template.html
@@ -1,3 +1,9 @@
+<!-- Course: CST205-01_FA22
+Title: Target Walmart Project
+Abstract:
+Authors: Christopher Raya, Kyle Dowling, Ricardo Perez JR
+Date: 12/05/2022 -->
+
 <!doctype html>
 <!-- Christopher Raya built this html page -->
 <html lang="en">
